# hermez-ai

./: .gitignore  AGENTS.md  ALIGNMENT_PLAN.md  ALIGNMENT_REPORT.md  ARCHITECTURAL_PLAN.md  CAPABILITIES.md  COMPREHENSIVE_ALIGNMENT_FINAL.md  COMPREHENSIVE_REVIEW.md  Cargo.toml  LICENSE  PORT_COMPLETENESS_REPORT.md  REVIEW.md  REVIEW_POSTFIX.md  UPSTREAM_ALIGNMENT_REPORT.md  flake.nix
crates/hermes-agent-engine/: Cargo.toml
crates/hermes-agent-engine/src/: agent.rs  failover.rs  lib.rs  memory_manager.rs  memory_provider.rs  message_loop.rs  plugin_system.rs  review_agent.rs  self_evolution.rs  skill_commands.rs  skill_utils.rs  smart_model_routing.rs  state_memory.rs  subagent.rs  title_generator.rs  trajectory.rs
crates/hermes-agent-engine/tests/: agent_conversation.rs
crates/hermes-batch/: Cargo.toml
crates/hermes-batch/src/: checkpoint.rs  distributions.rs  lib.rs  runner.rs  trajectories.rs
crates/hermes-batch/tests/: batch_runner_integration.rs
crates/hermes-cli/: Cargo.toml
crates/hermes-cli/src/: acp_cmd.rs  app.rs  auth_cmd.rs  backup_cmd.rs  banner.rs  batch_cmd.rs  claw_cmd.rs  clipboard.rs  completion_cmd.rs  config_cmd.rs  copilot_auth.rs  cron_cmd.rs  dashboard_cmd.rs  debug_cmd.rs  debug_share_cmd.rs  display.rs  doctor_cmd.rs  dump_cmd.rs  gateway_mgmt.rs  insights_cmd.rs  lib.rs  login_cmd.rs  logs_cmd.rs  mcp_cmd.rs  memory_cmd.rs  model_cmd.rs  nous_subscription.rs  oauth_server.rs  oauth_store.rs  pairing_cmd.rs  plugins_cmd.rs  profiles_cmd.rs  sessions_cmd.rs  setup_cmd.rs  skills_hub_cmd.rs  skin_engine.rs  slash_commands.rs  status_cmd.rs  swe_cmd.rs  tips.rs  (+7 more)
crates/hermes-cli/tests/: cli_commands_integration.rs
crates/hermes-compress/: Cargo.toml
crates/hermes-compress/src/: compressor.rs  lib.rs  summarizer.rs
crates/hermes-compress/tests/: compressor_integration.rs
crates/hermes-cron/: Cargo.toml
crates/hermes-cron/src/: delivery.rs  jobs.rs  lib.rs  scheduler.rs
crates/hermes-cron/tests/: scheduler_integration.rs
crates/hermes-gateway/: Cargo.toml
crates/hermes-gateway/src/: config.rs  dedup.rs  lib.rs  mcp_config.rs  runner.rs  session.rs  utils.rs
crates/hermes-gateway/tests/: platform_integration.rs
crates/hermes-prompt/: Cargo.toml
crates/hermes-prompt/src/: builder.rs  context_compressor.rs  context_engine.rs  context_references.rs  lib.rs  skills_prompt.rs  soul.rs
crates/hermes-prompt/tests/: prompt_integration.rs
crates/hermes-rl/: Cargo.toml
crates/hermes-rl/src/: atropos_env.rs  base.rs  lib.rs  swe_env.rs
crates/hermes-rl/tests/: rl_env_integration.rs
crates/hermes-state/: Cargo.toml
crates/hermes-state/src/: insights.rs  lib.rs  models.rs  schema.rs  session_db.rs
crates/hermes-state/tests/: session_db_integration.rs
crates/hermez-agent-engine/: Cargo.toml
crates/hermez-agent-engine/src/: agent.rs  budget.rs  failover.rs  lib.rs  memory_manager.rs  memory_provider.rs  message_loop.rs  plugin_system.rs  review_agent.rs  skill_commands.rs  skill_utils.rs  state_memory.rs  subagent.rs  title_generator.rs  trajectory.rs  usage_pricing.rs
crates/hermez-agent-engine/tests/: agent_conversation.rs
crates/hermez-batch/: Cargo.toml
crates/hermez-batch/src/: checkpoint.rs  distributions.rs  lib.rs  runner.rs  trajectories.rs
crates/hermez-batch/tests/: batch_runner_integration.rs
crates/hermez-cli/: Cargo.toml
crates/hermez-cli/src/: acp_cmd.rs  app.rs  auth_cmd.rs  backup_cmd.rs  banner.rs  batch_cmd.rs  claw_cmd.rs  clipboard.rs  completion_cmd.rs  config_cmd.rs  copilot_auth.rs  cron_cmd.rs  dashboard_cmd.rs  debug_cmd.rs  debug_share_cmd.rs  display.rs  doctor_cmd.rs  dump_cmd.rs  gateway_mgmt.rs  insights_cmd.rs  lib.rs  login_cmd.rs  logs_cmd.rs  mcp_cmd.rs  memory_cmd.rs  model_cmd.rs  nous_subscription.rs  oauth_flow.rs  oauth_server.rs  oauth_store.rs  pairing_cmd.rs  plugins_cmd.rs  profiles_cmd.rs  sessions_cmd.rs  setup_cmd.rs  skills_hub_cmd.rs  skin_engine.rs  slash_commands.rs  status_cmd.rs  swe_cmd.rs  (+8 more)
crates/hermez-cli/tests/: cli_commands_integration.rs
crates/hermez-compress/: Cargo.toml
crates/hermez-compress/src/: compressor.rs  lib.rs  summarizer.rs
crates/hermez-compress/tests/: compressor_integration.rs
crates/hermez-core/: Cargo.toml
crates/hermez-core/src/: auth_lock.rs  config.rs  constants.rs  env_loader.rs  errors.rs  hermez_home.rs  lib.rs  logging.rs  platforms.rs  proxy_validation.rs  redact.rs  text_utils.rs  time.rs
crates/hermez-core/tests/: config_integration.rs
crates/hermez-cron/: Cargo.toml
crates/hermez-cron/src/: delivery.rs  jobs.rs  lib.rs  scheduler.rs
crates/hermez-cron/tests/: scheduler_integration.rs
crates/hermez-llm/: Cargo.toml
crates/hermez-llm/src/: anthropic.rs  auxiliary_client.rs  bedrock.rs  client.rs  codex.rs  copilot_acp_client.rs  credential_pool.rs  error_classifier.rs  lib.rs  model_metadata.rs  model_normalize.rs  models_dev.rs  pricing.rs  provider.rs  rate_limit.rs  runtime_provider.rs
crates/hermez-llm/tests/: provider_integration.rs
crates/hermez-prompt/: Cargo.toml
crates/hermez-prompt/src/: builder.rs  cache_control.rs  context_compressor.rs  context_engine.rs  context_references.rs  injection_scan.rs  lib.rs  manual_compression_feedback.rs  skills_prompt.rs  soul.rs  subdirectory_hints.rs
crates/hermez-prompt/tests/: prompt_integration.rs
crates/hermez-rl/: Cargo.toml
crates/hermez-rl/src/: base.rs  lib.rs  math_env.rs  swe_env.rs  tool_use_env.rs  web_research_env.rs
crates/hermez-rl/tests/: rl_env_integration.rs
crates/hermez-tools/: Cargo.toml
crates/hermez-tools/src/: approval.rs  binary_extensions.rs  budget_config.rs  checkpoint.rs  clarify.rs  clipboard.rs  credential_files.rs  credentials.rs  cron_tools.rs  debug_helpers.rs  delegate.rs  feishu.rs  file_ops.rs  fuzzy_match.rs  homeassistant.rs  image_gen.rs  interrupt.rs  lib.rs  managed_tool_gateway.rs  mcp_oauth.rs  mcp_serve.rs  memory.rs  moa.rs  openrouter_client.rs  osv_check.rs  patch_parser.rs  path_security.rs  process_reg.rs  registry.rs  rl_training.rs  (+18 more)
examples/component-plugin/: Cargo.toml  plugin.yaml
(+385 files in other folders)
