[package]
name = "hermez"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "hermez"
path = "src/main.rs"

[[bin]]
name = "hermez-agent"
path = "src/hermez_agent/main.rs"

[[bin]]
name = "hermez-acp"
path = "src/hermez_acp/main.rs"

[dependencies]
hermez-cli.workspace = true
hermez-core.workspace = true
hermez-state.workspace = true
hermez-agent-engine.workspace = true
hermez-tools.workspace = true
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
parking_lot.workspace = true
dirs.workspace = true
axum.workspace = true
async-trait.workspace = true
thiserror.workspace = true
chrono.workspace = true
reqwest.workspace = true

[workspace]
members = [
    "crates/hermez-core",
    "crates/hermez-state",
    "crates/hermez-llm",
    "crates/hermez-tools",
    "crates/hermez-prompt",
    "crates/hermez-agent-engine",
    "crates/hermez-cli",
    "crates/hermez-cron",
    "crates/hermez-batch",
    "crates/hermez-compress",
    "crates/hermez-gateway",
    "crates/hermez-rl",
]
default-members = [
    "crates/hermez-core",
    "crates/hermez-state",
    "crates/hermez-llm",
    "crates/hermez-tools",
    "crates/hermez-prompt",
    "crates/hermez-agent-engine",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.84"
authors = ["Hermez Agent Contributors"]
license = "MIT"
repository = "https://github.com/NousResearch/hermez-agent"

[workspace.dependencies]
# Core
hermez-core = { path = "crates/hermez-core" }
hermez-state = { path = "crates/hermez-state" }
hermez-llm = { path = "crates/hermez-llm" }
hermez-tools = { path = "crates/hermez-tools" }
hermez-prompt = { path = "crates/hermez-prompt" }
hermez-agent-engine = { path = "crates/hermez-agent-engine" }
hermez-cli = { path = "crates/hermez-cli" }
hermez-cron = { path = "crates/hermez-cron" }
hermez-batch = { path = "crates/hermez-batch" }
hermez-compress = { path = "crates/hermez-compress" }
hermez-gateway = { path = "crates/hermez-gateway" }
hermez-rl = { path = "crates/hermez-rl" }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
urlencoding = "2.1"

# OpenAI / Anthropic
async-openai = "0.27"

# CLI / TUI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
reedline = "0.38"
crossterm = "0.28"
console = "0.15"
indicatif = "0.17"
dialoguer = "0.11"

# Data
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# SQLite
rusqlite = { version = "0.37", features = ["bundled", "backup", "functions"] }

# Config / Env
dotenvy = "0.15"
rand = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
tracing-appender = "0.2"

# Utilities
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
thiserror = "2"
anyhow = "1"
once_cell = "1"
parking_lot = "0.12"
tempfile = "3"
pathdiff = "0.2"
glob = "0.3"
walkdir = "2"
fs4 = "0.13"
indexmap = { version = "2", features = ["serde"] }
url = "2"
ipnet = "2"
shellexpand = "3"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
hex = "0.4"
dirs = "5"

# Token / JWT
jsonwebtoken = "9"
tiktoken-rs = "0.6"

# Cron
cron = "0.15"

# Diff / Fuzzy
similar = { version = "2", features = ["inline"] }
fuzzy-matcher = "0.3"

# Templates
minijinja = { version = "2", features = ["loader"] }

# MCP
rmcp = "1"

# Docker
bollard = "0.18"

# SSH
russh = "0.50"

# Testing
rstest = "0.24"
mockito = "1"
proptest = "1"
tokio-test = "0.4"

[dev-dependencies]
mockito.workspace = true
tokio.workspace = true
serde_json.workspace = true
tempfile.workspace = true
hermez-agent-engine.workspace = true
hermez-tools.workspace = true
hermez-llm.workspace = true
hermez-state.workspace = true
hermez-gateway.workspace = true
hermez-core.workspace = true

[profile.release]
lto = "thin"
strip = "debuginfo"

[profile.dev]
split-debuginfo = "unpacked"
