[package]
name = "hermes-batch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
hermes-core.workspace = true
hermes-agent-engine.workspace = true
hermes-tools.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
indicatif.workspace = true
parking_lot.workspace = true
chrono.workspace = true
rand.workspace = true
