[package]
name = "hermes-compress"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
hermes-core.workspace = true
hermes-prompt.workspace = true
hermes-llm.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
indicatif.workspace = true
tiktoken-rs.workspace = true
regex.workspace = true
once_cell.workspace = true
