[package]
name = "hermes-cron"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
hermes-core.workspace = true
hermes-agent-engine.workspace = true
hermes-tools.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
cron.workspace = true
uuid.workspace = true
chrono.workspace = true
parking_lot.workspace = true
tempfile.workspace = true
reqwest = { version = "0.12", features = ["json", "multipart"] }
