[package]
name = "hermes-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
hermes-core.workspace = true
hermes-state.workspace = true
hermes-cron.workspace = true
tokio.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
sha2.workspace = true
hmac.workspace = true
hex = "0.4"
parking_lot.workspace = true
regex.workspace = true
futures = "0.3"
async-stream = "0.3"
base64.workspace = true
url.workspace = true
sha1 = "0.10"
urlencoding = "2.1"
quick-xml = { version = "0.37", features = ["serialize"] }

# Email adapter
imap = { version = "2", features = ["native-tls"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "pool", "native-tls", "hostname", "builder"] }
mailparse = "0.15"
native-tls = "0.2"

# API Server adapter
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "limit", "set-header"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# WeCom WebSocket adapter
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }

# Weixin AES-128-ECB media decryption
aes = "0.8"
cbc = { version = "0.1.2", features = ["alloc"] }
md5 = "0.8.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Matrix adapter with full E2EE support
matrix-sdk = { version = "0.16", features = ["e2e-encryption", "sqlite", "native-tls"] }
matrix-sdk-base = "0.16"

[dev-dependencies]
tempfile.workspace = true
serial_test = "3"
serde_urlencoded = "0.7"

[features]
default = []
# Backward-compat no-op feature — E2EE is now always enabled.
matrix-e2ee = []
