[package]
name = "hermez-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
hermez-core.workspace = true
hermez-llm.workspace = true
hermez-tools.workspace = true
hermez-prompt.workspace = true
hermez-agent-engine.workspace = true
hermez-state.workspace = true
hermez-batch.workspace = true
hermez-cron.workspace = true
hermez-gateway.workspace = true
hermez-rl.workspace = true
async-trait.workspace = true
uuid.workspace = true
tokio.workspace = true
dirs.workspace = true
clap.workspace = true
clap_complete.workspace = true
reedline.workspace = true
crossterm.workspace = true
console.workspace = true
indicatif.workspace = true
dialoguer.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
regex.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
chrono.workspace = true
shellexpand.workspace = true
dotenvy.workspace = true
rand.workspace = true
which = "7"
reqwest.workspace = true
base64.workspace = true
url.workspace = true

# OAuth / Auth
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
axum = "0.7"
tokio-stream = { version = "0.1", features = ["sync"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
serial_test = "3"
