[package]
name = "hermez-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
dotenvy.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
regex.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
pathdiff.workspace = true
home = "0.5"
shellexpand = "3"
fs4 = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
