[package]
name = "hermez-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
hermez-core.workspace = true
async-openai.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
parking_lot.workspace = true
once_cell.workspace = true
regex.workspace = true
async-trait.workspace = true
futures.workspace = true
tiktoken-rs.workspace = true
chrono.workspace = true
dirs.workspace = true
fastrand = "2"
rand = "0.9"
time = { version = "0.3", features = ["parsing", "serde", "formatting"] }
hmac.workspace = true
sha2.workspace = true
base64 = "0.22"
hex = "0.4"
bytes = "1"
url.workspace = true
anyhow.workspace = true

[dev-dependencies]
mockito = "1"
anyhow = "1"
tempfile.workspace = true
