[package]
name = "hermez-prompt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
hermez-core.workspace = true
hermez-llm.workspace = true
hermez-tools.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
regex.workspace = true
tiktoken-rs.workspace = true
minijinja.workspace = true
walkdir.workspace = true
glob.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
serde_yaml.workspace = true
indexmap.workspace = true
reqwest.workspace = true
tokio.workspace = true
pathdiff.workspace = true
shellexpand.workspace = true
